--- a/.github/workflows/atomic-zfs-kmod-build.yml
+++ b/.github/workflows/atomic-zfs-kmod-build.yml
@@ -1,7 +1,7 @@
 name: zfs-atomic-kmod-build
 on:
   schedule:
-    - cron: '05 7 * * *'  # 9:45am UTC everyday
+    - cron: '05 7 * * 1,3,5'  # 7:05am UTC Mon, Wed, Fri
   push:
     branches:
       - main
