add f42 to build matrix & update Readme

--- a/.github/workflows/atomic-zfs-kmod-build.yml
+++ b/.github/workflows/atomic-zfs-kmod-build.yml
@@ -26,9 +26,12 @@ jobs:
       fail-fast: false
       matrix:
         base_name: [zfs-atomic-kmod]
-        major_version: [41]
+        major_version: [41, 42]
         include:
           - major_version: 41
+            is_latest_version: false
+            is_stable_version: true
+          - major_version: 42
             is_latest_version: false
             is_stable_version: true
     steps: 
