--- a/.github/workflows/atomic-zfs-kmod-build.yml
+++ b/.github/workflows/atomic-zfs-kmod-build.yml
@@ -26,12 +26,15 @@ jobs:
       fail-fast: false
       matrix:
         base_name: [zfs-atomic-kmod]
-        major_version: [41, 42]
+        major_version: [41, 42, 42]
         include:
           - major_version: 41
             is_latest_version: false
             is_stable_version: true
           - major_version: 42
+            is_latest_version: true
+            is_stable_version: true
+          - major_version: 43
             is_latest_version: false
             is_stable_version: true
     steps: 
