--- a/.github/workflows/atomic-zfs-kmod-build.yml
+++ b/.github/workflows/atomic-zfs-kmod-build.yml
@@ -26,17 +26,17 @@ jobs:
       fail-fast: false
       matrix:
         base_name: [zfs-atomic-kmod]
-        major_version: [41, 42, 43]
+        major_version: [42, 43, 44]
         include:
-          - major_version: 41
-            is_latest_version: false
-            is_stable_version: true
           - major_version: 42
-            is_latest_version: true
+            is_latest_version: false
             is_stable_version: true
           - major_version: 43
-            is_latest_version: false
+            is_latest_version: true
             is_stable_version: true
+          - major_version: 44
+            is_latest_version: false
+            is_stable_version: false
     steps: 
       # Checkout push-to-registry action GitHub repository
       - name: Checkout Push to Registry action
